--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "@sequelize/core": "^7.0.0-alpha.10",
     "abbrev": "^1.1.1",
     "accepts": "^1.3.8",
     "ansi-align": "^3.0.1",
@@ -129,6 +130,8 @@
     "package-json": "^6.5.0",
     "parseurl": "^1.3.3",
     "path-to-regexp": "^0.1.7",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "pg-promise": "^10.11.1",
     "picomatch": "^2.3.1",
     "prepend-http": "^2.0.0",
@@ -151,6 +154,7 @@
     "semver": "^5.7.1",
     "semver-diff": "^3.1.1",
     "send": "^0.17.2",
+    "sequelize": "^6.17.0",
     "serve-static": "^1.14.2",
     "setprototypeof": "^1.2.0",
     "sift": "^16.0.0",
